[easyscript] rootnodeとcalltargetの最小限のテストを追加